Updated about and home templates.

--- a/resources/templates/about.html
+++ b/resources/templates/about.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 {% block content %}
-  <p>this is the story of stochasticyoga... work in progress</p>
+  <p>This website is to facilitate overcoming weaknesses borne by familiarity through practicing yoga in a completely unique way</p>
 {% endblock %}
