--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
   <div class="jumbotron">
-    <h1>Welcome to stochasticyoga</h1>
-    <p>Time to start building your site!</p>
+    <h1>Welcome to Bretts Stochastic Yoga App</h1>
+    <p></p>
     <p><a class="btn btn-primary btn-lg" href="http://luminusweb.net">Learn more &raquo;</a></p>
   </div>
 
